# opengl-raycast

./: CMakeLists.txt  README.md  app
.cache/clangd/index/: glad.c.2B8891144FFF1763.idx  glad.h.9B0A53F42A451D92.idx  glfw3.h.D6F2F3C2CDAA74B9.idx  khrplatform.h.1B8380D8E0026456.idx  main.cpp.0CC4B3387BD90338.idx
app.dSYM/Contents/Resources/DWARF/: app
app.dSYM/Contents/Resources/Relocations/aarch64/: app.yml
dependencies/include/glad/: glad.h
dependencies/src/: glad.c
src/: main.cpp
